--- a/Code/SuperCapCodeG4/MDK-ARM/SuperCapCodeG4/SuperCapCodeG4.build_log.htm
+++ b/Code/SuperCapCodeG4/MDK-ARM/SuperCapCodeG4/SuperCapCodeG4.build_log.htm
@@ -17,27 +17,23 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.38.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
+Target DLL:      CMSIS_AGDI.dll V1.33.15.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 C:\Users\purdu\Desktop\Super Cap special folder\PurdueRMSuperCap\Code\SuperCapCodeG4\MDK-ARM\SuperCapCodeG4.uvprojx
-Project File Date:  06/02/2024
+Project File Date:  06/03/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'SuperCapCodeG4'
 Note: source file '..\Core\Src\supercap.c' - object file renamed from 'SuperCapCodeG4\supercap.o' to 'SuperCapCodeG4\supercap_1.o'.
-compiling main.c...
-../Core/Src/main.c(164): warning:  #550-D: variable "hfdcan1_pHeader"  was set but never used
-    FDCAN_TxHeaderTypeDef hfdcan1_pHeader;
-../Core/Src/main.c(165): warning:  #177-D: variable "hfdcan1_pTxData"  was declared but never referenced
-    uint8_t hfdcan1_pTxData[2] = {0x00, 0x01};
-../Core/Src/main.c: 2 warnings, 0 errors
+assembling startup_stm32g473xx.s...
+compiling tim.c...
 linking...
-Program Size: Code=17228 RO-data=568 RW-data=44 ZI-data=2884  
+Program Size: Code=18812 RO-data=568 RW-data=44 ZI-data=2956  
 FromELF: creating hex file...
-"SuperCapCodeG4\SuperCapCodeG4.axf" - 0 Error(s), 2 Warning(s).
+"SuperCapCodeG4\SuperCapCodeG4.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
